# Geometric_Modeling

./: README.md
lab1/: main_file.cpp  main_file_v1.cpp  main_file_v2_final.cpp
lab2/: Vertices.txt  main_file_corrected.cpp  main_file_submitted.cpp
lab3/: CMakeLists.txt  DooSabinSurf.h  FaceData.h  FaceDetail.h  Viewport.h  catMullClark.h  cubicBsplineSurf.h  loop.h  main_file.cpp
off_mesh_files/: cube.off  cubecc1.off  cubecc2.off  cubecc3.off  cubedoosab1.off  cubedoosab2.off  cubedoosab3.off  tetdoo1.off
